--- a/recruitment/jobs/templates/base.html
+++ b/recruitment/jobs/templates/base.html
@@ -1,6 +1,6 @@
 <!-- base.html -->
 
-<h1 style="margin:auto; width:50%;">酱油科技</h1>
+<h1 style="margin:auto; width:50%;">酱油科技-招聘系统</h1>
 
 <p></p>
 
