--- a/jobs/templates/job.html
+++ b/jobs/templates/job.html
@@ -3,7 +3,6 @@
 {% block content %}
 
 <div style="margin:auto; width:50%;">
-    <a href="joblist" style="color:blue">返回职位列表</a> <p></p>
 
     {% if job %}
         <div class="position_name">
@@ -22,12 +21,16 @@
         <div class="position_requirement" style="width:600px;">
             <h3>任职要求：</h3>
             <pre style="font-size:16px">{{job.job_requirement}}</pre>
-        </div><br>
+        </div>
 
         <div class="apply_position">
 {#            <input type="button" style="width:120px; background-color:lightblue;" value="申请" onclick="location.href='/resume/add/'"/>#}
-            <input type="button" style="width:120px; background-color:lightblue;" value="申请"
-                   onclick="location.href='/resume/add/?apply_position={{ job.job_name }}&city={{ job.city_name }}'"/>
+{#            <input type="button" style="width:120px; background-color:lightblue;" value="申请"#}
+{#                   onclick="location.href='/resume/add/?apply_position={{ job.job_name }}&city={{ job.city_name }}'"/>#}
+            <button stype="submit" class="btn btn-primary"
+                    onclick="location.href='/resume/add/?apply_position={{ job.job_name }}&city={{ job.city_name }}'">
+                提交
+            </button>
         </div>
     {% else %}
         <p>职位不存在</p>
