--- a/jobs/templates/base.html
+++ b/jobs/templates/base.html
@@ -1,4 +1,7 @@
 <!-- base.html -->
+
+{% load i18n %}
+
 {# load the tag library #}
 {% load bootstrap4 %}
 
@@ -9,25 +12,44 @@
 {# Display django.crontrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-<h1 style="margin:auto; width:50%;">酱油科技开放职位</h1>
+{# 使用 translate 获取某一个 Key 对应的资源 #}
+<h1 style="margin:auto; width:50%;">{% translate "酱油科技开放职位" %}</h1>
 <p></p>
 
 {% block header %}
-<a href="/" style="text-decoration: none; color:#007bff">首页</a>
-<a href="/joblist" style="text-decoration: none; color:#007bff">职位列表</a>
+<a href="/" style="text-decoration: none; color:#007bff">{% translate "Homepage" %}</a>
+<a href="/joblist" style="text-decoration: none; color:#007bff">{% translate "Job List" %}</a>
 
 {% if user.is_authenticated %}
-    <a href="/accounts/logout" style="text-decoration: none; color:#007bff">退出</a>
+    <a href="/accounts/logout" style="text-decoration: none; color:#007bff">{% translate "Logout" %}</a>
 {% else %}
-    <a href="/accounts/login" style="text-decoration: none; color:#007bff">登录</a>
+    <a href="/accounts/login" style="text-decoration: none; color:#007bff">{% translate "Login" %}</a>
 {% endif %}
 
+{# 当变更是对象属性、对象属性的属性或方法取的值，使用 blocktranslate #}
 {% if user.is_authenticated %}
-    <p>终于等到你 {{ user.username }}，期待加入我们，一起改变世界。</p>
+    <p>{% blocktranslate with user_name=user.username %} 终于等到你 {{ user_name }}，期待加入我们，一起改变世界。{% endblocktranslate %}</p>
 {% else %}
-    <p>欢迎你，期待加入我们，登录后可提交简历。</p>
+    <p>{% translate "欢迎你，期待加入我们，登录后可提交简历。" %}</p>
 {% endif %}
 {% endblock %}
+
+<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                {{ language.name_local }} {{ language.code }}
+            </option>
+        {% endfor %}
+    </select>
+    {% translate "language:" %} {{ LANGUAGE_CODE }}
+    <input type="submit" value={% translate "Switch" %} style="font-size:12;height:20px">
+</form>
+
 
 <hr>
 
